more spacing/wrapping fixes

--- a/src/components/mention_link/mention_link.scss
+++ b/src/components/mention_link/mention_link.scss
@@ -5,6 +5,7 @@
   white-space: normal;
   display: inline;
   color: var(--link);
+  word-break: normal;
 
   & .new,
   & .original {
