--- a/src/components/mentions_line/mentions_line.scss
+++ b/src/components/mentions_line/mentions_line.scss
@@ -2,6 +2,7 @@
   word-break: break-all;
 
   .showMoreLess {
+    margin-left: 0.5em;
     white-space: normal;
     color: var(--link);
   }
